Fix for ALF-2241 - minor spacing issue on login panel
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@19703 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/web-editor-plugin/source/web/awe/awe.css
+++ b/root/projects/web-editor-plugin/source/web/awe/awe.css
@@ -155,3 +155,9 @@
 {
    width:100%;
 }
+
+#wef-login-panel-form div.form-field label
+{
+   margin-top:1em;
+   display:block;
+}
